--- a/.github/workflows/commands.yaml
+++ b/.github/workflows/commands.yaml
@@ -9,7 +9,7 @@ jobs:
       - name: determine location of kubectl
         run: |
           echo "kubectl version"
-          kubectl version
+          #kubectl version
           which kubectl
 
           curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.6/bin/linux/amd64/kubectl
