--- a/.github/workflows/commands.yaml
+++ b/.github/workflows/commands.yaml
@@ -9,8 +9,9 @@ jobs:
       - name: determine location of kubectl
         run: |
           echo "kubectl version"
-          #kubectl version
+          kubectl version --client=true
           which kubectl
 
           curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.6/bin/linux/amd64/kubectl
           mv kubectl $(which kubectl)
+          kubectl version --client=true
