--- a/.github/workflows/commands.yaml
+++ b/.github/workflows/commands.yaml
@@ -12,6 +12,12 @@ jobs:
           kubectl version --client=true
           which kubectl
 
-          curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.6/bin/linux/amd64/kubectl
-          mv kubectl $(which kubectl)
+      - name: Install version 1.23.6 kuebctl
+        uses: azure/setup-kubectl@v2.0
+        with:
+          version: '1.23.6' # default is latest stable
+      
+      - name: Check version again
+        run: |
           kubectl version --client=true
+
