--- a/.github/workflows/commands.yaml
+++ b/.github/workflows/commands.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Install version 1.23.6 kuebctl
         uses: azure/setup-kubectl@v2.0
         with:
-          version: '1.23.6' # default is latest stable
+          version: 'v1.23.6' # default is latest stable
       
       - name: Check version again
         run: |
